# deteiling_bot

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  TECHNICAL_SPECIFICATION.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt  start.py
alembic/: env.py  script.py.mako
alembic/versions/: 0001_initial.py  20260712_0001_initial_schema.py  20260712_0002_add_appointment_slot.py  20260713_0003_price_calculator.py  README.md  (+1 more)
app/: __init__.py  health.py  main.py  seed.py
docs/: ACCEPTANCE.md  ADMIN_GUIDE.md  BACKUP_AND_RESTORE.md  BOOKING_STATE_MACHINE.md  CONFIGURATION.md  DATABASE_SCHEMA.md  DEPLOYMENT.md  INSTALLATION.md  PRICE_CALCULATION.md  SECURITY.md  TECH_SPEC.md  TROUBLESHOOTING.md  USER_FLOWS.md  USER_SCENARIOS.md
scripts/: check_database.py  cleanup_expired_reservations.py  create_owner.py  seed_initial_data.py
tests/: conftest.py  test_admin_appointments.py  test_admin_auth.py  test_admin_menu.py  test_admin_schedule.py  test_application_factory.py  test_appointment_changes.py  test_booking_flow.py  test_booking_service.py  test_config.py  test_contacts.py  test_content_audit.py  test_faq_search.py  test_imports.py  test_keyboards.py  test_maintenance_scripts.py  test_manager_requests.py  test_models.py  test_models_repositories.py  test_notifications.py  test_phone.py  test_photo_upload.py  test_price_calculator.py  test_pricing.py  test_reminder_scheduler.py  test_schedule.py  test_scheduling.py  test_service_selection.py  test_start_navigation.py  test_submission.py  test_user_entry.py  test_vehicle_selection.py
(+124 files in other folders)
