[project]
name = "detailing-studio-bot"
version = "1.0.0"
description = "Telegram bot for a detailing studio"
requires-python = ">=3.12"
dependencies = [
  "aiogram>=3.13,<4", "sqlalchemy[asyncio]>=2.0.36,<3", "asyncpg>=0.30,<1",
  "alembic>=1.14,<2", "redis>=5.2,<6", "apscheduler>=3.11,<4",
  "pydantic-settings>=2.7,<3", "structlog>=24.4,<26", "phonenumbers>=8.13,<9",
]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[project.optional-dependencies]
dev = ["aiosqlite>=0.20,<1", "pytest>=8.3,<9", "pytest-asyncio>=0.25,<1", "ruff>=0.9,<1", "mypy>=1.14,<2"]

[tool.ruff]
target-version = "py312"
line-length = 100
[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]
ignore = ["E501", "UP046"]
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
exclude = ["alembic"]
disable_error_code = ["union-attr", "no-any-return", "import-untyped", "index", "arg-type"]
